--- a/notebook/Data profiling and Data Cleansing.ipynb
+++ b/notebook/Data profiling and Data Cleansing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9e6a1cdc",
+   "id": "07f1200d",
    "metadata": {},
    "source": [
     "### Data Quality Assesment\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21241220",
+   "id": "a62f4e99",
    "metadata": {},
    "source": [
     "### Extract Data"
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "02bee42b",
+   "id": "b0bf91c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2142b1a5",
+   "id": "ec444fb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "042a49f0",
+   "id": "0cea9e89",
    "metadata": {},
    "source": [
     "### Data Quality Assesment"
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc16b610",
+   "id": "066e30fd",
    "metadata": {},
    "source": [
     "#### Uniqueness"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "23724cb7",
+   "id": "eabd9fd5",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "60b9a9ed",
+   "id": "e71069f2",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3847dfdc",
+   "id": "c92a66a8",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "958528ba",
+   "id": "c43990f8",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4b14a7b",
+   "id": "3af25ea3",
    "metadata": {},
    "source": [
     "#### Completeness"
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b00693da",
+   "id": "793b6286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1b52de68",
+   "id": "83b4b972",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8426fd93",
+   "id": "80e07306",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b71020a4",
+   "id": "a6972942",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de4d04e8",
+   "id": "b8adc1c7",
    "metadata": {},
    "source": [
     "#### Consistancy"
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fc18eb9b",
+   "id": "71656be4",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "47899829",
+   "id": "a0865106",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "151075ff",
+   "id": "8dc71cf5",
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f3fff896",
+   "id": "a498a1c2",
    "metadata": {},
    "outputs": [
     {
@@ -1786,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4d3de82b",
+   "id": "ebcbe130",
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1844,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c8af0941",
+   "id": "370c6111",
    "metadata": {},
    "outputs": [
     {
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee53ed9a",
+   "id": "eb85808d",
    "metadata": {},
    "source": [
     "#### Validity"
@@ -1873,7 +1873,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "70d66e0c",
+   "id": "3e987f73",
    "metadata": {},
    "outputs": [
     {
@@ -2002,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b190832e",
+   "id": "58a5e64d",
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc52e439",
+   "id": "7713a567",
    "metadata": {},
    "source": [
     "Total data 10006\n",
@@ -2091,7 +2091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "841f54f0",
+   "id": "aeac2325",
    "metadata": {},
    "source": [
     "### Data Clensing"
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dbffb54",
+   "id": "67d8837d",
    "metadata": {},
    "source": [
     "#### Remove duplication"
@@ -2108,7 +2108,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "417384b5",
+   "id": "0d7cf870",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2118,7 +2118,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "759192a0",
+   "id": "fe6dd1de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "28e802ed",
+   "id": "0879956b",
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "361252d1",
+   "id": "0738f5af",
    "metadata": {},
    "source": [
     "#### remove null row"
@@ -2180,7 +2180,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a543c55f",
+   "id": "6b942d82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2190,7 +2190,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "37f37c14",
+   "id": "a0158ce1",
    "metadata": {},
    "outputs": [
     {
@@ -2233,7 +2233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfa961ec",
+   "id": "91401368",
    "metadata": {},
    "source": [
     "### Replace unconsistance data"
@@ -2242,7 +2242,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "fdc74148",
+   "id": "5057d259",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2253,7 +2253,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "241ff8f3",
+   "id": "fef77778",
    "metadata": {},
    "outputs": [
     {
@@ -2272,9 +2272,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ca4f301",
+   "metadata": {},
+   "source": [
+    "#### Additional matery"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c8fccfdf",
+   "id": "ec988b51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2283,18 +2291,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "329869ab",
+   "execution_count": 65,
+   "id": "16bf0665",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf['const_date'] = pd.to_datetime(pdf['Date'], format='%m/%d/%Y').dt.date"
+    "# change from string to date\n",
+    "pdf['constructed_date'] = pd.to_datetime(pdf['Date'], format='%m/%d/%Y').dt.date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "c450b826",
+   "execution_count": 66,
+   "id": "7a412605",
    "metadata": {},
    "outputs": [
     {
@@ -2303,19 +2312,19 @@
        "datetime.date(2001, 1, 1)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pdf['const_date'].min()"
+    "pdf['constructed_date'].min()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "89d3b7fd",
+   "execution_count": 67,
+   "id": "b8746995",
    "metadata": {},
    "outputs": [
     {
@@ -2324,19 +2333,181 @@
        "datetime.date(2019, 3, 30)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pdf['const_date'].max()"
+    "pdf['constructed_date'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "370a2c9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div id=afe1f2fe-8426-4537-80cb-eafb33123e55 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands?.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('afe1f2fe-8426-4537-80cb-eafb33123e55').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Invoice ID</th>\n",
+       "      <th>Branch</th>\n",
+       "      <th>Customer type</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Product line</th>\n",
+       "      <th>Unit price</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Tax 5%</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Payment</th>\n",
+       "      <th>cogs</th>\n",
+       "      <th>gross income</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>const_date</th>\n",
+       "      <th>constructed_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>750-67-8428</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Member</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Health and beauty</td>\n",
+       "      <td>74.69</td>\n",
+       "      <td>7</td>\n",
+       "      <td>26.1415</td>\n",
+       "      <td>01/05/2019</td>\n",
+       "      <td>13:08</td>\n",
+       "      <td>Ewallet</td>\n",
+       "      <td>522.83</td>\n",
+       "      <td>26.1415</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>2019-01-05</td>\n",
+       "      <td>2019-01-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>226-31-3081</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Electronic accessories</td>\n",
+       "      <td>15.28</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.8200</td>\n",
+       "      <td>03/08/2019</td>\n",
+       "      <td>10:29</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>76.40</td>\n",
+       "      <td>3.8200</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>2019-03-08</td>\n",
+       "      <td>2019-03-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>631-41-3108</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Home and lifestyle</td>\n",
+       "      <td>46.33</td>\n",
+       "      <td>7</td>\n",
+       "      <td>16.2155</td>\n",
+       "      <td>03/03/2019</td>\n",
+       "      <td>13:23</td>\n",
+       "      <td>Credit card</td>\n",
+       "      <td>324.31</td>\n",
+       "      <td>16.2155</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>2019-03-03</td>\n",
+       "      <td>2019-03-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>123-19-1176</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Member</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Health and beauty</td>\n",
+       "      <td>58.22</td>\n",
+       "      <td>8</td>\n",
+       "      <td>23.2880</td>\n",
+       "      <td>1/27/2019</td>\n",
+       "      <td>20:33</td>\n",
+       "      <td>Ewallet</td>\n",
+       "      <td>465.76</td>\n",
+       "      <td>23.2880</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>2019-01-27</td>\n",
+       "      <td>2019-01-27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>373-73-7910</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Sports and travel</td>\n",
+       "      <td>86.31</td>\n",
+       "      <td>7</td>\n",
+       "      <td>30.2085</td>\n",
+       "      <td>02/08/2019</td>\n",
+       "      <td>10:37</td>\n",
+       "      <td>Ewallet</td>\n",
+       "      <td>604.17</td>\n",
+       "      <td>30.2085</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>2019-02-08</td>\n",
+       "      <td>2019-02-08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "    Invoice ID Branch Customer type  Gender            Product line  \\\n",
+       "0  750-67-8428      A        Member  Female       Health and beauty   \n",
+       "1  226-31-3081      C        Normal  Female  Electronic accessories   \n",
+       "2  631-41-3108      A        Normal    Male      Home and lifestyle   \n",
+       "3  123-19-1176      A        Member    Male       Health and beauty   \n",
+       "4  373-73-7910      A        Normal    Male       Sports and travel   \n",
+       "\n",
+       "   Unit price  Quantity   Tax 5%        Date   Time      Payment    cogs  \\\n",
+       "0       74.69         7  26.1415  01/05/2019  13:08      Ewallet  522.83   \n",
+       "1       15.28         5   3.8200  03/08/2019  10:29         Cash   76.40   \n",
+       "2       46.33         7  16.2155  03/03/2019  13:23  Credit card  324.31   \n",
+       "3       58.22         8  23.2880   1/27/2019  20:33      Ewallet  465.76   \n",
+       "4       86.31         7  30.2085  02/08/2019  10:37      Ewallet  604.17   \n",
+       "\n",
+       "   gross income  Rating  const_date constructed_date  \n",
+       "0       26.1415     9.1  2019-01-05       2019-01-05  \n",
+       "1        3.8200     9.6  2019-03-08       2019-03-08  \n",
+       "2       16.2155     7.4  2019-03-03       2019-03-03  \n",
+       "3       23.2880     8.4  2019-01-27       2019-01-27  \n",
+       "4       30.2085     5.3  2019-02-08       2019-02-08  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pdf.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa65e9b",
+   "id": "9ac4a75d",
    "metadata": {},
    "outputs": [],
    "source": []
